@@ -7,7 +7,7 @@ Facebook::Facebook()
 	UsersPtrArr = new User * [physicalNumberOfUsers];
 	FanpagePtrArr = new Fanpage * [physicalNumberOfFanpage];
 }
-void Facebook::PrintMenu() const
+void Facebook::printMenu()								const
 {
 	cout << "Choose an action number from the above menu:" << endl;
 	cout << "1.Add user" << endl;
@@ -23,29 +23,29 @@ void Facebook::PrintMenu() const
 	cout << "11.Show all frieds/fans of a User/Fanpage" << endl;
 	cout << "12.Exit" << endl;
 }
-void  Facebook::ChooseFromMenu(int choice)
+void  Facebook::chooseFromMenu(int choice)
 {
 	switch (choice)
 	{
-	case 1: AddUser();
+	case 1: addUser();
 		break;
-	case 2: AddFanpage();
+	case 2: addFanpage();
 		break;
 	case 3:addTextStatus();
 		break;
-	case 4:ShowStatusOfEntity();
+	case 4:showStatusOfEntity();
 		break;
-	case 5:ShowFriendStatus();
+	case 5:showFriendStatus();
 		break;
-	case 6:AddFriendship();
+	case 6:addFriendship();
 		break;
-	case 7:CancelFriendship();
+	case 7:cancelFriendship();
 		break;
 	case 8:addFanToPage();
 		break;
 	case 9:removeFanFromPage();
 		break;
-	case 10:ShowAllUsersAndFanpages();
+	case 10:showAllUsersAndFanpages();
 		break;
 	case 11: showAllFriendsOrFans();
 		break;
@@ -55,6 +55,141 @@ void  Facebook::ChooseFromMenu(int choice)
 		break;
 	}
 }
+
+void Facebook::showStatusOfEntity()
+{
+	bool isPage;
+	cout << "Press 1 to show status for a fanpage or 0 for a user: ";
+	cin >> isPage;
+	CleanBuffer();
+	cout << "Enter your name: ";
+	char name[NAME_LEN];
+	cin.getline(name, NAME_LEN - 1);
+	if (isPage)
+	{
+		Fanpage* currentPage = findPage(name);
+		if (currentPage == nullptr)
+		{
+			cout << "This page does not exist, returning to menu" << endl;
+		}
+		else
+		{
+			currentPage->showStatuses();
+		}
+	}
+	else
+	{
+		User* currentUser = findUser(name);
+		if (currentUser == nullptr)
+		{
+			cout << "This user does not exist, returning to menu" << endl;
+		}
+		else
+		{
+			currentUser->showStatuses();
+		}
+	}
+}
+void Facebook::showAllFriendsOrFans()
+{
+	bool isPage;
+	cout << "Press 1 to add status for a fanpage or 0 for a user: ";
+	cin >> isPage;
+	CleanBuffer();
+	cout << "Enter your name: ";
+	char name[NAME_LEN];
+	cin.getline(name, NAME_LEN - 1);
+	if (isPage)
+	{
+		Fanpage* currentPage = findPage(name);
+		if (currentPage == nullptr)
+		{
+			cout << "No page called " << name << " was found, returning to menu." << endl;
+			return;
+		}
+		currentPage->showAllFans();
+	}
+	else
+	{
+		User* currentUser = findUser(name);
+		if (currentUser == nullptr)
+		{
+			cout << "No user called " << name << " was found, returning to menu." << endl;
+			return;
+		}
+		currentUser->showAllFriends();
+	}
+}
+void Facebook::showAllUsers()							const
+{
+	cout << "Users: " << endl;
+	for (int i = 0; i < numberOfUsers; i++)
+	{
+		cout << i + 1 << "." << UsersPtrArr[i]->getName() << endl;
+	}
+}
+void Facebook::showAllFanpage()							const
+{
+	cout << "FanPages: " << endl;
+	for (int i = 0; i < numberOfFanpage; i++)
+	{
+		cout << i + 1 << ".";
+		FanpagePtrArr[i]->printName();
+	}
+
+}
+void Facebook::showAllUsersAndFanpages()				const
+{
+	showAllUsers();
+	showAllFanpage();
+}
+void Facebook::showFriendStatus()
+{
+	User* user;
+	char userName[NAME_LEN];
+	cout << "Please enter the user name you would like to see his/her *all* friends 10 latest statuses:\n ";
+	CleanBuffer();
+	cin.getline(userName, NAME_LEN - 1);
+	user = findUser(userName);
+	if (user == nullptr)
+	{
+		cout << "User doesnt exist, returning to menu" << endl;
+	}
+	else
+	{
+		user->showStatuses(10);
+	}
+}
+
+User* Facebook::findUser(const char* name)
+{
+	for (int i = 0; i < numberOfUsers; i++)
+	{
+		if (!strcmp(name, UsersPtrArr[i]->getName()))
+		{
+			return UsersPtrArr[i];
+		}
+	}
+	cout << "User not found, nullptr returned" << endl;
+	return nullptr;
+}
+Fanpage* Facebook::findPage(const char* name)
+{
+	for (int i = 0; i < numberOfFanpage; i++)
+	{
+		if (!strcmp(name, FanpagePtrArr[i]->getName()))
+		{
+			return FanpagePtrArr[i];
+		}
+	}
+	cout << "Page not found, nullptr returned" << endl;
+	return nullptr;
+}
+void Facebook::Exit() const
+{
+	cout << "Thank you for using FaceBook, goodbye !" << endl;
+}
+
 void Facebook::addTextStatus()
 {
 	bool isPage;
@@ -83,7 +218,7 @@ void Facebook::addTextStatus()
 		cout << "Enter page's name: ";
 		char pageName[NAME_LEN];
 		cin.getline(pageName, NAME_LEN - 1);
-		Fanpage* currentPage = FindPage(pageName);
+		Fanpage* currentPage = findPage(pageName);
 		if (currentPage == nullptr)
 		{
 			cout << "No page called " << pageName << " was found, returning to menu" << endl;
@@ -95,31 +230,7 @@ void Facebook::addTextStatus()
 		currentPage->addStatus(*status);
 	}
 }
-void Facebook::addTextStatus(bool isPage, const char* statusStr, const char* userOrPageName)
-{//overload only for init perpuses adding statuses.
-	if (!isPage)
-	{
-		User* currentUser = findUser(userOrPageName);
-		if (currentUser == nullptr)
-		{
-			cout << "No user called " << userOrPageName << " was found, returning to menu." << endl;
-			return;
-		}
-		Status* status = new Status(statusStr);
-		currentUser->addStatus(*status);
-	}
-	else
-	{
-		Fanpage* currentPage = FindPage(userOrPageName);
-		if (currentPage == nullptr)
-		{
-			cout << "No page called " << userOrPageName << " was found, returning to menu" << endl;
-		}
-		Status* status = new Status(statusStr);
-		currentPage->addStatus(*status);
-	}
-}
-void Facebook::AddUser()      //check user exist ? 
+void Facebook::addUser()      //check user exist ? 
 {
 	int day, month, year;
 	char name[NAME_LEN];
@@ -142,57 +253,31 @@ void Facebook::AddUser()      //check user exist ?
 	UsersPtrArr[numberOfUsers] = newUser;
 	numberOfUsers++;
 }
-void Facebook::AddUser(char* name, int day, int month, int year) //overload only for init perpuses adding 3 users.
+void Facebook::addFanToPage()
 {
-	if (numberOfUsers >= physicalNumberOfUsers)
+	char pageName[NAME_LEN];
+	char fanName[NAME_LEN];
+	cout << "To which page would you like to add a fan? ";
+	CleanBuffer();
+	cin.getline(pageName, NAME_LEN - 1);
+	Fanpage* page = findPage(pageName);
+	if (page == nullptr)
 	{
-		makeDoubleUserssSpace();
-	}
-	if (findUser(name) != nullptr)
-	{
-		cout << "This user already exists, returning to menu" << endl;
+		cout << "No page called " << pageName << " was found, returning to menu." << endl;
 		return;
 	}
-	Date* userDate = new Date(year, month, day);
-	User* newUser = new User(name, *userDate);
-	UsersPtrArr[numberOfUsers] = newUser;
-	numberOfUsers++;
-}
-void Facebook::ShowStatusOfEntity()
-{
-	bool isPage;
-	cout << "Press 1 to show status for a fanpage or 0 for a user: ";
-	cin >> isPage;
+	cout << "Which user would you like to add as a fan? ";
 	CleanBuffer();
-	cout << "Enter your name: ";
-	char name[NAME_LEN];
-	cin.getline(name, NAME_LEN - 1);
-	if (isPage)
+	cin.getline(fanName, NAME_LEN - 1);
+	User* user = findUser(fanName);
+	if (user == nullptr)
 	{
-		Fanpage* currentPage = FindPage(name);
-		if (currentPage == nullptr)
-		{
-			cout << "This page does not exist, returning to menu" << endl;
-		}
-		else
-		{
-			currentPage->showStatuses();
-		}
+		cout << "No user called " << fanName << " was found, returning to menu." << endl;
+		return;
 	}
-	else
-	{
-		User* currentUser = findUser(name);
-		if (currentUser == nullptr)
-		{
-			cout << "This user does not exist, returning to menu" << endl;
-		}
-		else
-		{
-			currentUser->showStatuses();
-		}
-	}
+	page->addFan(*user);
 }
-void Facebook::AddFanpage()
+void Facebook::addFanpage()
 {
 	char name[NAME_LEN];
 	cout << "Please enter the page's name: ";
@@ -202,7 +287,7 @@ void Facebook::AddFanpage()
 	{
 		makeDoublePageSpace();
 	}
-	if (FindPage(name) != nullptr)
+	if (findPage(name) != nullptr)
 	{
 		cout << "This page already exists, returning to menu" << endl;
 	}
@@ -210,53 +295,7 @@ void Facebook::AddFanpage()
 	FanpagePtrArr[numberOfFanpage] = newPage;
 	numberOfFanpage++;
 }
-void Facebook::AddFanpage(const char* name)                            //overload only for init perpuses adding 3 fanpage.
-{
-	if (numberOfFanpage >= physicalNumberOfFanpage)
-	{
-		makeDoublePageSpace();
-	}
-	if (FindPage(name) != nullptr)
-	{
-		cout << "This page already exists, returning to menu" << endl;
-	}
-	Fanpage* newPage = new Fanpage(name);
-	FanpagePtrArr[numberOfFanpage] = newPage;
-	numberOfFanpage++;
-}
-void Facebook::ShowAllUsers() const
-{
-	cout << "Users: " << endl;
-	for (int i = 0; i < numberOfUsers; i++)
-	{
-		cout << i + 1 << "." << UsersPtrArr[i]->getName() << endl;
-	}
-}
-void Facebook::ShowAllFanpage() const
-{
-	cout << "FanPages: " << endl;
-	for (int i = 0; i < numberOfFanpage; i++)
-	{
-		cout << i + 1 << ".";
-		FanpagePtrArr[i]->printName();
-	}
-
-}
-void Facebook::ShowFriendStatus()
-{
-	User* user;
-	char userName[NAME_LEN];
-	cout << "Please enter the user name you would like to see his/her *all* friends 10 latest statuses:\n ";
-	CleanBuffer();
-	cin.getline(userName, NAME_LEN - 1);
-	user = findUser(userName);
-	if (user == nullptr)
-	{
-		cout << "User doesnt exist, returning to menu" << endl;
-	}
-	user->showStatuses(10);
-}
-void Facebook::AddFriendship()   //to cancel the way of adding the same friend several times
+void Facebook::addFriendship()   //to cancel the way of adding the same friend several times
 {
 	User* user1, * user2;
 	char userName1[NAME_LEN], userName2[NAME_LEN];
@@ -279,25 +318,31 @@ void Facebook::AddFriendship()   //to cancel the way of adding the same friend s
 		user1->addFriend(*user2);
 	}
 }
-void Facebook::AddFriendship(const char* name1, const char* name2)
-{//overload only for init perpuses adding friendship.
-	User* user1, * user2;
-	user1 = findUser(name1);
-	user2 = findUser(name2);
-	if (user1 == nullptr || user2 == nullptr)
+void Facebook::removeFanFromPage()
+{
+	char pageName[NAME_LEN];
+	char fanName[NAME_LEN];
+	cout << "From which page would you like to remove a fan? ";
+	CleanBuffer();
+	cin.getline(pageName, NAME_LEN - 1);
+	Fanpage* page = findPage(pageName);
+	if (page == nullptr)
 	{
-		cout << "at least one of the users does not exits, returning to menu." << endl;
+		cout << "No page called " << pageName << " was found, returning to menu." << endl;
+		return;
 	}
-	else if (!user1->isFriendsWith(name2))
+	cout << "Which user would you like to remove as a fan? ";
+	CleanBuffer();
+	cin.getline(fanName, NAME_LEN - 1);
+	User* user = findUser(fanName);
+	if (user == nullptr)
 	{
-		cout << "Users are not friend." << endl;
+		cout << "No fan called " << fanName << " was found, returning to menu." << endl;
+		return;
 	}
-	else
-	{
-		user1->addFriend(*user2);
-	}
+	page->removeFan(*user);
 }
-void Facebook::CancelFriendship()
+void Facebook::cancelFriendship()
 {
 	User* user1, * user2;
 	char userName1[NAME_LEN], userName2[NAME_LEN];
@@ -319,121 +364,84 @@ void Facebook::CancelFriendship()
 		user1->unFriend(*user2);
 	}
 }
-void Facebook::ShowAllUsersAndFanpages() const
+
+//all overloads to admin
+void Facebook::addFanpage(const char* name)                            //overload only for init perpuses adding 3 fanpage.
 {
-	ShowAllUsers();
-	ShowAllFanpage();
-}
-User* Facebook::findUser(const char* name)
-{
-	for (int i = 0; i < numberOfUsers; i++)
+	if (numberOfFanpage >= physicalNumberOfFanpage)
 	{
-		if (!strcmp(name, UsersPtrArr[i]->getName()))
-		{
-			return UsersPtrArr[i];
-		}
+		makeDoublePageSpace();
 	}
-	cout << "User not found, nullptr returned" << endl;
-	return nullptr;
-}
-Fanpage* Facebook::FindPage(const char* name)
-{
-	for (int i = 0; i < numberOfFanpage; i++)
+	if (findPage(name) != nullptr)
 	{
-		if (!strcmp(name, FanpagePtrArr[i]->getName()))
-		{
-			return FanpagePtrArr[i];
-		}
+		cout << "This page already exists, returning to menu" << endl;
 	}
-	cout << "Page not found, nullptr returned" << endl;
-	return nullptr;
-}
-void Facebook::Exit() const
-{
-	cout << "Thank you for using FaceBook, goodbye !" << endl;
-}
-void Facebook::showAllFriendsOrFans()
-{
-	bool isPage;
-	cout << "Press 1 to add status for a fanpage or 0 for a user: ";
-	cin >> isPage;
-	CleanBuffer();
-	cout << "Enter your name: ";
-	char name[NAME_LEN];
-	cin.getline(name, NAME_LEN - 1);
-	if (isPage)
-	{
-		Fanpage* currentPage = FindPage(name);
-		if (currentPage == nullptr)
-		{
-			cout << "No page called " << name << " was found, returning to menu." << endl;
-			return;
-		}
-		currentPage->showAllFans();
-	}
-	else
-	{
-		User* currentUser = findUser(name);
-		if (currentUser == nullptr)
-		{
-			cout << "No user called " << name << " was found, returning to menu." << endl;
-			return;
-		}
-		currentUser->showAllFriends();
-	}
-}
-void Facebook::addFanToPage()
-{
-	char pageName[NAME_LEN];
-	char fanName[NAME_LEN];
-	cout << "To which page would you like to add a fan? ";
-	CleanBuffer();
-	cin.getline(pageName, NAME_LEN - 1);
-	Fanpage* page = FindPage(pageName);
-	if (page == nullptr)
-	{
-		cout << "No page called " << pageName << " was found, returning to menu." << endl;
-		return;
-	}
-	cout << "Which user would you like to add as a fan? ";
-	CleanBuffer();
-	cin.getline(fanName, NAME_LEN - 1);
-	User* user = findUser(fanName);
-	if (user == nullptr)
-	{
-		cout << "No user called " << fanName << " was found, returning to menu." << endl;
-		return;
-	}
-	page->addFan(*user);
+	Fanpage* newPage = new Fanpage(name);
+	FanpagePtrArr[numberOfFanpage] = newPage;
+	numberOfFanpage++;
 }
 void Facebook::addFanToPage(const char* userName, const char* pageName)
 {//overload only for adding inital entities.
-	Fanpage* page = FindPage(pageName);
+	Fanpage* page = findPage(pageName);
 	page->addFan(*findUser(userName));
 }
-void Facebook::removeFanFromPage()
+void Facebook::addUser(char* name, int day, int month, int year) //overload only for init perpuses adding 3 users.
 {
-	char pageName[NAME_LEN];
-	char fanName[NAME_LEN];
-	cout << "From which page would you like to remove a fan? ";
-	CleanBuffer();
-	cin.getline(pageName, NAME_LEN - 1);
-	Fanpage* page = FindPage(pageName);
-	if (page == nullptr)
+	if (numberOfUsers >= physicalNumberOfUsers)
 	{
-		cout << "No page called " << pageName << " was found, returning to menu." << endl;
+		makeDoubleUserssSpace();
+	}
+	if (findUser(name) != nullptr)
+	{
+		cout << "This user already exists, returning to menu" << endl;
 		return;
 	}
-	cout << "Which user would you like to remove as a fan? ";
-	CleanBuffer();
-	cin.getline(fanName, NAME_LEN - 1);
-	User* user = findUser(fanName);
-	if (user == nullptr)
+	Date* userDate = new Date(year, month, day);
+	User* newUser = new User(name, *userDate);
+	UsersPtrArr[numberOfUsers] = newUser;
+	numberOfUsers++;
+}
+void Facebook::addTextStatus(bool isPage, const char* statusStr, const char* userOrPageName)
+{//overload only for init perpuses adding statuses.
+	if (!isPage)
 	{
-		cout << "No fan called " << fanName << " was found, returning to menu." << endl;
-		return;
+		User* currentUser = findUser(userOrPageName);
+		if (currentUser == nullptr)
+		{
+			cout << "No user called " << userOrPageName << " was found, returning to menu." << endl;
+			return;
+		}
+		Status* status = new Status(statusStr);
+		currentUser->addStatus(*status);
 	}
-	page->removeFan(*user);
+	else
+	{
+		Fanpage* currentPage = findPage(userOrPageName);
+		if (currentPage == nullptr)
+		{
+			cout << "No page called " << userOrPageName << " was found, returning to menu" << endl;
+		}
+		Status* status = new Status(statusStr);
+		currentPage->addStatus(*status);
+	}
+}
+void Facebook::addFriendship(const char* name1, const char* name2)
+{//overload only for init perpuses adding friendship.
+	User* user1, * user2;
+	user1 = findUser(name1);
+	user2 = findUser(name2);
+	if (user1 == nullptr || user2 == nullptr)
+	{
+		cout << "at least one of the users does not exits, returning to menu." << endl;
+	}
+	else if (!user1->isFriendsWith(name2))
+	{
+		cout << "Users are not friend." << endl;
+	}
+	else
+	{
+		user1->addFriend(*user2);
+	}
 }
 
 void Facebook::makeDoubleUserssSpace()
