@@ -3,5 +3,7 @@
 #include <iostream>
 using namespace std;
 #pragma warning (disable: 4996)
+#pragma warning (disable: 4267)
+
 void CleanBuffer();
 #endif
